--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,6 +28,8 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
+file.reference.mariadb-java-client-2.6.0-sources.jar=C:\\Users\\SOM\\Downloads\\mariadb-java-client-2.6.0-sources.jar
+file.reference.mariadb-java-client-2.6.0.jar=C:\\Users\\SOM\\Downloads\\mariadb-java-client-2.6.0.jar
 file.reference.mysql-connector-java-5.0.7-bin.jar=C:\\Users\\Raja\\Desktop\\imp sw\\jar\\mysql-connector-java-5.0.7-bin.jar
 file.reference.mysql-connector-java-5.1.13-bin.jar=C:\\Users\\SOM\\Desktop\\anurag sir java\\jars\\mysql-connector-java-5.1.13-bin.jar
 file.reference.mysql-connector.jar=C:\\Users\\SOM\\Desktop\\anurag sir java\\jars\\mysql-connector.jar
@@ -48,7 +50,9 @@ javac.classpath=\
     ${file.reference.ojdbc14.jar}:\
     ${file.reference.paytm-checksum-1.1.jar}:\
     ${file.reference.PaytmChecksum.jar}:\
-    ${file.reference.mysql-connector-java-5.0.7-bin.jar}
+    ${file.reference.mysql-connector-java-5.0.7-bin.jar}:\
+    ${file.reference.mariadb-java-client-2.6.0-sources.jar}:\
+    ${file.reference.mariadb-java-client-2.6.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
